Running test-cdk.sh